# osldr

./: CMakeLists.txt  LICENSE  README.md  boot.ini  osldr.djl
src/: asm.s  bios.h  config.c  config.h  conio.c  conio.h  ctype.c  ctype.h  drive.c  drive.h  errno.h  fat.c  filehdrs.h  io.c  io.h  limits.h  loader.c  loader.h  main.c  mem.c  mem.h  messages.c  messages.h  multiboot.c  multiboot.h  raw.c  start.s  stdarg.h  stddef.h  stdio.c  stdio.h  stdlib.c  stdlib.h  string.h  string.s  time.c  time.h  types.h  video.c  video.h
